--- a/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
@@ -1,8 +1,17 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = Localizer["confirmEmail:title"];
 }
 
-<h1>@ViewData["Title"]</h1>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
+<div class="flex justify-center mt-4">
+    <div class="flex flex-col " >
+        <i class="fa fa-check-circle text-green-700 fa-3x text-center" ></i>
+        <span class="mt-4">@Model.StatusMessage</span>
+    </div>
+</div>
+
+@section MainFooter
+{
+    <partial name="Shared/BackToLogin"/>
+}
