--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -20,9 +20,15 @@
     <div>
         <span>@Localizer["resetPassword:instructions"]</span>
     </div>
-    <div class="mt-4">
-        <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
-    </div>
+    
+    @if (ViewData["email"] == "")
+    {
+        <div class="mt-4">
+            <input id="email" name="email" type="email" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
+        </div>
+    }
+    
+    
     <div>
         <div class="mt-1">
             <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
@@ -55,6 +61,7 @@
         var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
         var recaptcha = '@RecaptchaOptions.Value.SiteKey';
         var code = '@ViewData["code"]';
+        var emailInitialValue = '@ViewData["email"]'
     </script>
 
     <script src="/js/pages/resetPassword.js"></script>
