--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -4,10 +4,10 @@
 @model ResetPasswordModel
 
 
-<div class="flex justify-center mt-6" >
+<div class="flex justify-center mt-6">
     <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
     <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-        <i class="fa fa-check-circle text-green-700 fa-3x text-center" ></i>
+        <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
         <span class="mt-4">@Localizer["resetPassword:success"]</span>
     </div>
 </div>
@@ -24,8 +24,8 @@
             <input id="email" name="email" type="email" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
         </div>
     }
- 
-   
+
+
     <div class="mt-1">
         <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
     </div>
@@ -34,12 +34,15 @@
         <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
     </div>
 
-    <button v-on:click.prevent="resetPassword" class="btn btn-primary">
-        @ViewData["Submit"]
-    </button>
     <div class="mt-1">
-           <partial name="Shared/PasswordRequirements"/>
-       </div>
+        <button v-on:click.prevent="resetPassword" class="btn btn-primary">
+            @ViewData["Submit"]
+        </button>
+    </div>
+
+    <div class="mt-1">
+        <partial name="Shared/PasswordRequirements"/>
+    </div>
 </form>
 
 
