--- a/Nuages.Identity.UI/Pages/Index.cshtml
+++ b/Nuages.Identity.UI/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">This is a home page</h1>
-    <a href="~/connect/logout">Logout</a>
+    <a href="~/account/logout">Logout</a>
 </div>
