--- a/Nuages.Identity.UI/wwwroot/css/tailwind.css
+++ b/Nuages.Identity.UI/wwwroot/css/tailwind.css
@@ -24,5 +24,10 @@
     a{
         @apply font-medium text-indigo-600 hover:text-indigo-500
     }
+    
+    .btn-simple
+    {
+        @apply  inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-sm font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500
+    }
 
 }
