--- a/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
@@ -14,20 +14,9 @@
     logging in.
 </p>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="email" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-</div>
+<form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <input asp-for="Input.Email" class="form-control" autocomplete="email" type="hidden" />
+    <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+</form>
+   
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
