--- a/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
@@ -3,7 +3,7 @@
 @{
 
 
-  ViewBag.LogoUrl = UIOptions.Value.LogosUrl;
+  ViewBag.LogoUrl = UIOptions.Value.LogoUrl;
 
  
 }
@@ -11,7 +11,7 @@
 <div class="sm:mx-auto sm:w-full sm:max-w-md">
     @if (ViewBag.LogoUrl != null)
     {
-      <img class="mx-auto h-32" src="@ViewBag.LogoUrl" alt="Workflow">
+      <img class="mx-auto h-24" src="@ViewBag.LogoUrl" alt="Workflow">
     }
     
     <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
