--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -18,7 +18,7 @@
     <div>
         <span>@ViewData["Instructions"]</span>
     </div>
-    @if (ViewData["email"] == "")
+    @if (ViewData["email"]?.ToString() == "")
     {
         <div class="mt-4">
             <input id="email" name="email" type="email" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
