--- a/Nuages.Identity.UI/Pages/Account/Register.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Register.cshtml
@@ -34,7 +34,7 @@
     </div>
 
     <div class="mt-1">
-        <button v-on:click.prevent="register" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <button v-on:click.prevent="register" class="btn btn-primary">
             @Localizer["register:button"]
         </button>
     </div>
