--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -25,7 +25,7 @@
             <span>@Localizer["forgotPassword:instructions"]</span>
         </div>
         <div class="mt-4">
-            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["email"]" required class="text-box">
+            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box">
         </div>
     </div>
     <div>
