--- a/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
@@ -11,7 +11,7 @@
     <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
     <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
         <i class="fa fa-check-circle text-green-700 fa-3x text-center" ></i>
-        
+        <span class="mt-4">@Localizer["externalLogin:accountCreated"]</span>
     </div>
        
 </div>
