--- a/Nuages.Identity.UI/wwwroot/css/tailwind.css
+++ b/Nuages.Identity.UI/wwwroot/css/tailwind.css
@@ -14,7 +14,7 @@
     }
     
     .btn{
-        @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2
+        @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2
     }
     .btn-primary
     {
@@ -27,7 +27,7 @@
     
     .btn-simple
     {
-        @apply  inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-sm font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500
+        @apply  inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm  font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500
     }
 
 }
