--- a/Nuages.Identity.UI/Pages/Account/Manage/Index.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Index.cshtml
@@ -6,7 +6,11 @@
     Layout = "_LayoutSettings";
 }
 
-yo
+<div class="flex flex-row bg-blue-50">
+  <div class="basis-1/4">01</div>
+  <div class="basis-1/2">02</div>
+  <div class="basis-1/4">03</div>
+</div>
 
 @section Scripts {
    
