--- a/Nuages.Identity.UI/Pages/Index.cshtml
+++ b/Nuages.Identity.UI/Pages/Index.cshtml
@@ -8,3 +8,9 @@
     <h1 class="display-4">This is a home page</h1>
     <a href="~/account/logout">Logout</a>
 </div>
+
+<div class="flex flex-row bg-blue-50">
+    <div class="basis-1/4">01</div>
+    <div class="basis-1/4">02</div>
+    <div class="basis-1/2">03</div>
+</div>
