--- a/Nuages.Identity.UI/Pages/Shared/_LayoutSettings.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_LayoutSettings.cshtml
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="~/css/tailwind-output.css"/>
     <script src="https://kit.fontawesome.com/34d2a269b0.js" crossorigin="anonymous"></script>
     
-   <script src="https://www.google.com/recaptcha/api.js?render=@RecaptchaOptions.Value.SiteKey"></script>
 </head>
 <body class="w-full">
 
-
-@RenderBody()
-
+<div class="min-h-screen bg-gray-100 flex flex-col justify-start py-12 sm:px-6 lg:px-8 " id="app">
+<div class="mt-8 ">
+    @RenderBody()
+</div>
+</div>
 
 <environment names="Production">
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
