--- a/Nuages.Identity.UI/Pages/Account/_Manage/EnableAuthenticator.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/_Manage/EnableAuthenticator.cshtml
@@ -50,4 +50,7 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    
+        <script type="text/javascript" src="~/lib/qrcode.js"></script>
+        <script type="text/javascript" src="~/js/qr.js"></script>
 }
