--- a/Nuages.Identity.UI/Pages/Account/Login.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Login.cshtml
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div>
-            <button v-on:click.prevent="login" class="btn btn-primary">
+            <button v-on:click.prevent="login" class="btn btn-primary" type="button">
                 @Localizer["login:connect"]
             </button>
         </div>
