--- a/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -26,7 +26,7 @@
         </div>
         
         <div>
-            <button v-on:click.prevent="login" class="btn btn-primary" type="button">
+            <button v-on:click.prevent="login" class="btn btn-primary" >
                 @Localizer["login:connect"]
             </button>
         </div>
