--- a/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
@@ -36,7 +36,7 @@
          </div>
         
         <div>
-            <button v-on:click.prevent="login" class="btn btn-primary" type="button">
+            <button v-on:click.prevent="login" class="btn btn-primary" >
                 @Localizer["login:connect"]
             </button>
         </div>
