--- a/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -1,3 +1,49 @@
 @page
 @model Nuages.Identity.UI.Pages.Account.LoginWithPasswordless
+@inject IOptions<Nuages.Web.Recaptcha.GoogleRecaptchaOptions> RecaptchaOptions
 
+@{
+    ViewData["Title"] = Localizer["passwordLess:title"];
+}
+
+
+
+<div class="flex justify-center mt-6" >
+    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+        <i class="fa fa-check-circle text-green-700 fa-3x text-center" ></i>
+        <span class="mt-4">@Localizer["passwordLess:seeEmail"]</span>
+    </div>
+</div>
+
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="sendPasswordlessInfo" id="formPasswordless" v-if="status == ''">
+    <div>
+        <div>
+            <span>@Localizer["passwordLess:instructions"]</span>
+        </div>
+        <partial name="Shared/ErrorList"/>
+        <div class="mt-4">
+            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box">
+        </div>
+    </div>
+    <div>
+        <button v-on:click.prevent="sendPasswordlessInfo" class="btn btn-primary">
+            @Localizer["passwordLess:send"]
+        </button>
+    </div>
+</form>
+
+@section Scripts
+{
+    <script>
+        var emailRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["email"])";
+        var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
+        var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+    </script>
+    <script src="/js/pages/passwordless.js"></script>
+}
+
+@section MainFooter
+{
+    <partial name="Shared/BackToLogin"/>
+}
