--- a/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -40,7 +40,7 @@
         var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
         var recaptcha = '@RecaptchaOptions.Value.SiteKey';
     </script>
-    <script src="/js/pages/passwordless.js"></script>
+    <script src="/js/pages/loginWithPasswordless.js"></script>
 }
 
 @section MainFooter
