--- a/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
@@ -46,7 +46,7 @@
       <span>@Localizer["mfa.appNotAvailable"]</span>
      <ul class="list-disc mt-2 ml-4">  
          <li><a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableRecoveryCodes"]</a></li>
-         <li><a id="recovery-code-login" asp-page="./LoginWithSMS" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableSMS"]</a></li>
+         <li><a id="recovery-code-login" asp-page="./SendSMSCode" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableSMS"]</a></li>
      </ul>
      
 
@@ -68,5 +68,5 @@
         var rememberMe = @Model.RememberMe.ToString().ToLower();
     </script>
 
-    <script src="/js/pages/login2fa.js"></script>
+    <script src="/js/pages/loginWith2fa.js"></script>
 }
