--- a/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -32,6 +32,10 @@
         </div>
     </form>
  
+    <div class="mt-4">
+        <partial name="Shared/LoginNotRemembered"/>
+    </div>
+    
 </div>
 
 @section MainFooter
