--- a/Nuages.Identity.UI/Pages/Account/SMSLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/SMSLogin.cshtml
@@ -31,7 +31,9 @@
             </button>
         </div>
     </form>
- 
+     <div class="mt-4">
+         <partial name="Shared/LoginNotRemembered"/>
+     </div>
 </div>
 
 @section MainFooter
