--- a/Nuages.Identity.UI/Pages/Account/SMSLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/SMSLogin.cshtml
@@ -32,7 +32,7 @@
         </div>
     </form>
      <div class="mt-4">
-         <partial name="Shared/LoginNotRemembered"/>
+         <partial name="Shared/Warning" model ='new {Title = Localizer["warning"], Message = Localizer["login.cantRemember"]}'/>
      </div>
 </div>
 
