--- a/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -33,7 +33,7 @@
     </form>
  
     <div class="mt-4">
-        <partial name="Shared/LoginNotRemembered"/>
+        <partial name="Shared/Warning" model ='new {Title = Localizer["warning"], Message = Localizer["login.cantRemember"]}'/>
     </div>
     
 </div>
