--- a/Nuages.Identity.UI/Pages/Shared/Warning.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/Warning.cshtml
@@ -5,10 +5,12 @@
         </div>
         <div class="ml-3">
             <h3 class="text-sm font-medium text-orange-800">
-                @Localizer["warning"]
+               
+                @Model.Title
             </h3>
             <div class="mt-2 text-sm text-orange-700">
-                @Localizer["login.cantRemember"]
+                 @Model.Message
+          
             </div>
         </div>
     </div>
