--- a/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
@@ -6,51 +6,38 @@
     ViewData["Title"] = Localizer["mfa.title"];
 }
 
-
-
 <div class="flex justify-center mt-6">
     <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
 </div>
 
-
 <div v-show="status != 'sending'">
     <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
-        <div>
-            <span>@Localizer["mfa.instructions"]</span>
-        </div>
-         <partial name="Shared/ErrorList"/>
-        <div>
-            <div class="mt-1">
-                <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="Code" required class="text-box" autocomplete=“off”>
+        <span>@Localizer["mfa.instructions"]</span>
+        <partial name="Shared/ErrorList"/>
+         <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="Code" required class="text-box" autocomplete=“off”>
+        <div class="flex items-center justify-between">
+            <div class="flex items-center">
+                <input id="rememberMachine" name="rememberMachine" v-model="rememberMachine" type="checkbox" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
+                <label for="rememberMachine" class="ml-2 block text-sm text-gray-900">
+                    @Localizer["mfa:rememberMachine"]
+                </label>
             </div>
         </div>
-
-         <div class="flex items-center justify-between">
-             <div class="flex items-center">
-                 <input id="rememberMachine" name="rememberMachine" v-model="rememberMachine" type="checkbox" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                 <label for="rememberMachine" class="ml-2 block text-sm text-gray-900">
-                     @Localizer["mfa:rememberMachine"]
-                 </label>
-             </div>
-           
-         </div>
-        
-        <div>
-            <button v-on:click.prevent="login" class="btn btn-primary" >
-                @Localizer["login:connect"]
-            </button>
-        </div>
+        <button v-on:click.prevent="login" class="btn btn-primary">
+            @Localizer["login:connect"]
+        </button>
     </form>
-  <div class="text-sm mt-4">
-    
-      <span>@Localizer["mfa.appNotAvailable"]</span>
-     <ul class="list-disc mt-2 ml-4">  
-         <li><a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableRecoveryCodes"]</a></li>
-         <li><a id="recovery-code-login" asp-page="./SendSMSCode" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableSMS"]</a></li>
-     </ul>
-     
-
- </div>
+    <div class="text-sm mt-4">
+        <span>@Localizer["mfa.appNotAvailable"]</span>
+        <ul class="list-disc mt-2 ml-4">
+            <li>
+                <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableRecoveryCodes"]</a>
+            </li>
+            <li>
+                <a id="recovery-code-login" asp-page="./SendSMSCode" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableSMS"]</a>
+            </li>
+        </ul>
+    </div>
 </div>
 
 @section MainFooter
