--- a/Nuages.Identity.UI/Pages/Account/_Manage/ChngePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/_Manage/ChngePassword.cshtml
@@ -2,7 +2,8 @@
 @model ChangePasswordModel
 @{
     ViewData["Title"] = "Change password";
-    ViewData["ActivePage"] = ManageNavPages.ChangePassword;
+    ViewData["ActivePage"] = ManageNavPages.ChangePasswordModelViewComponent;
+    Layout = null;
 }
 
 <h3>@ViewData["Title"]</h3>
