--- a/Nuages.Identity.UI/Pages/Shared/_LayoutSettings.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_LayoutSettings.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body class="w-full">
 
-<div class="min-h-screen bg-gray-100 flex flex-col justify-start py-12 sm:px-6 lg:px-8 " id="app">
+<div class="min-h-screen bg-gray-100 flex flex-col justify-start sm:px-6 lg:px-8">
     <div class="mt-8 ">
          <a href="~/account/logout">Logout</a>
         @RenderBody()
