--- a/Nuages.Identity.UI/Pages/Account/_Manage/ChngePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/_Manage/ChngePassword.cshtml
@@ -2,7 +2,7 @@
 @model ChangePasswordModel
 @{
     ViewData["Title"] = "Change password";
-    ViewData["ActivePage"] = ManageNavPages.ChangePasswordModelViewComponent;
+    ViewData["ActivePage"] = ManageNavPages.ChangePassword;
     Layout = null;
 }
 
