--- a/Nuages.Identity.UI/Pages/Shared/Warning.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/Warning.cshtml
@@ -6,10 +6,10 @@
         <div class="ml-3">
             <h3 class="text-sm font-medium text-orange-800">
                
-                @Model.Title
+                @Model?.Title
             </h3>
             <div class="mt-2 text-sm text-orange-700">
-                 @Model.Message
+                 @Model?.Message
           
             </div>
         </div>
